[package]
name = "nstimes"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15.0"
env = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
ureq = "3.1.2"
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["serde"] }

